# mcp-persistent-shell

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: security-permissive.yaml  security.yaml
scripts/systemd/: env.example  mcp-shell.service
src/mcp_persistent_shell/: __main__.py  config.py  models.py  server.py
src/mcp_persistent_shell/security/: validator.py
src/mcp_persistent_shell/session/: manager.py  store.py
src/mcp_persistent_shell/shell/: process.py
src/mcp_persistent_shell/tools/: download_file.py  execute_command.py  get_cwd.py  reset_session.py  upload_file.py
src/mcp_persistent_shell/utils/: logger.py
